k8s/networking/allow-user-to-product.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-user-to-product
  namespace: my-services
spec:
  podSelector:
    matchLabels:
      app: product-service
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: user-service
      ports:
        - protocol: TCP
          port: 3001
  policyTypes:
    - Ingress
